# nimbench

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.omx/logs/: omx-2026-05-27.jsonl
.omx/state/: native-stop-state.json  session.json
.omx/state/sessions/019e677a-f71f-71c3-97c2-acdb7f11915c/: prompt-routing-state.json
nimbench/: __init__.py  api.py  cache.py  cli.py  models.py  ui.py
tests/: test_cli.py  test_enhancements.py
